--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Happy Birthday Chini 🎉</title>
   <style>
+    
     * {
       margin: 0;
       padding: 0;
@@ -18,6 +19,15 @@
       position: relative;
     }
 
+    .sparkles {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background: url('https://i.imgur.com/2yYAYQx.gif') center/cover no-repeat;
+      opacity: 0.15;
+      z-index: 0;
+    }
+
     .envelope {
       position: absolute;
       top: 50%;
@@ -30,7 +40,7 @@
       text-align: center;
       z-index: 2;
       cursor: pointer;
-      animation: pulse 1.5s infinite;
+      animation: pulse 1.5s infinite, fadeIn 1.5s ease-out;
       transition: transform 0.4s ease-in-out;
     }
 
@@ -44,6 +54,11 @@
       100% { box-shadow: 0 0 10px #ffaad4; }
     }
 
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translate(-50%, -50%) scale(0.5); }
+      to { opacity: 1; transform: translate(-50%, -50%) scale(1); }
+    }
+
     .card, .section {
       display: none;
       position: absolute;
@@ -53,16 +68,11 @@
       background: white;
       border-radius: 20px;
       box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
-      width: 350px;
+      width: 400px;
       padding: 30px;
       text-align: center;
       z-index: 3;
       animation: fadeIn 0.8s ease-out;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translate(-50%, -50%) scale(0.5); }
-      to { opacity: 1; transform: translate(-50%, -50%) scale(1); }
     }
 
     h1, h2 {
@@ -108,91 +118,122 @@
       display: none;
     }
 
-    img {
-      max-width: 100%;
-      border-radius: 12px;
-      margin-bottom: 15px;
+    /* Dice Styling */
+    .dice-box {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 20px;
+      perspective: 600px;
+      height: 200px;
     }
+
+    .dice {
+      width: 120px;
+      height: 120px;
+      position: relative;
+      transform-style: preserve-3d;
+      animation: slow-roll 12s infinite linear;
+    }
+
+    .face {
+      position: absolute;
+      width: 120px;
+      height: 120px;
+      border-radius: 16px;
+      background-color: #fff;
+      background-size: cover;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+    }
+
+    .face:nth-child(1) { transform: rotateY(0deg) translateZ(60px); background-image: url('k1.jpg'); }
+    .face:nth-child(2) { transform: rotateY(180deg) translateZ(60px); background-image: url('k2.jpg'); }
+    .face:nth-child(3) { transform: rotateX(90deg) translateZ(60px); background-image: url('k3.jpg'); }
+    .face:nth-child(4) { transform: rotateX(-90deg) translateZ(60px); background-image: url('k4.jpg'); }
+    .face:nth-child(5) { transform: rotateY(90deg) translateZ(60px); background-image: url('k5.jpg'); }
+    .face:nth-child(6) { transform: rotateY(-90deg) translateZ(60px); background-image: url('k6.jpg'); }
+
+    @keyframes slow-roll {
+      0%   { transform: rotateX(0deg) rotateY(0deg); }
+      50%  { transform: rotateX(180deg) rotateY(180deg); }
+      100% { transform: rotateX(360deg) rotateY(360deg); }
+    }
+
   </style>
 </head>
 <body>
 
-  <!-- Envelope -->
-  <div class="envelope" onclick="openCard()">
-    📩 Tap to Open Your Birthday Surprise 💌
+<div class="sparkles"></div>
+
+<!-- Envelope -->
+<div class="envelope" onclick="openCard()">
+  📩 Tap to Open Your Birthday Surprise 💌
+</div>
+
+<!-- Main Menu Card -->
+<div class="card" id="mainMenu">
+  <h1>Happy Birthday Chini! 🎂💖</h1>
+  <h2>My Favourite Girl 🌸</h2>
+  <button class="btn" onclick="showSection('msg')">💬 See My Message</button>
+  <button class="btn" onclick="showSection('diceBox')">🎲 Snapshot</button>
+  <button class="btn" onclick="goBack()">🔙 Close All</button>
+</div>
+
+<!-- Message Section -->
+<div class="section" id="msg">
+  <h2>💌 From Me to You</h2>
+  <p>
+    I honestly don't know how to put it in words, but you make life better just by being in it. <br><br>
+    You're the softest soul I know.<br>
+    I hope this day is filled with everything you love, and the year ahead brings you nothing but happiness, laughter, and all the magic you deserve.<br><br>
+  </p>
+  <button class="btn" onclick="goBack()">🔙 Back</button>
+</div>
+
+<!-- Dice Section -->
+<div class="section" id="diceBox">
+  <h2></h2>
+  <div class="dice-box">
+    <div class="dice">
+      <div class="face"></div>
+      <div class="face"></div>
+      <div class="face"></div>
+      <div class="face"></div>
+      <div class="face"></div>
+      <div class="face"></div>
+    </div>
   </div>
+  <p>Each face has a reason...💞</p>
+  <button class="btn" onclick="goBack()">🔙 Back</button>
+</div>
 
-  <!-- Main Menu Card -->
-  <div class="card" id="mainMenu">
-    <h1>Happy Birthday Chini! 🎂💖</h1>
-    <h2>My Favourite Girl 🌸</h2>
-    <button class="btn" onclick="showSection('msg')">💬 See My Message</button>
-    <button class="btn" onclick="showSection('img')">📸 Open Surprise Pic</button>
-    <button class="btn" onclick="showSection('game')">🎮 Play a Lil Game</button>
-    <button class="btn" onclick="goBack()">🔙 Close All</button>
-  </div>
+<!-- Music Button -->
+<button class="music" id="musicBtn" onclick="document.getElementById('bgMusic').play()">🎶 Music Playing</button>
 
-  <!-- Message Section -->
-  <div class="section" id="msg">
-    <h2>💌 From Me to You</h2>
-    <p>
-       I honestly don't know how to put it in words, but you make life better just by being in it. <br><br>
-      You're the softest soul I know.<br>
-      I hope this day is filled with everything you love, and the year ahead brings you nothing but happiness, laughter, and all the magic you deserve.<br><br>
-    </p>
-    <button class="btn" onclick="goBack()">🔙 Back</button>
-  </div>
+<!-- Background Music -->
+<audio id="bgMusic" loop>
+  <source src="https://www.bensound.com/bensound-music/bensound-sunny.mp3" type="audio/mp3">
+</audio>
 
-  <!-- Image Section -->
-  <div class="section" id="img">
-    <h2>📸 Snapshot</h2>
-    <img src="pinkflowers.jpg" alt="Cute Flower" />
-    <p>🌷💞</p>
-    <button class="btn" onclick="goBack()">🔙 Back</button>
-  </div>
+<!-- Script -->
+<script>
+  function openCard() {
+    document.querySelector('.envelope').style.display = 'none';
+    document.getElementById('mainMenu').style.display = 'block';
+    document.getElementById('musicBtn').style.display = 'block';
+    document.getElementById('bgMusic').play();
+  }
 
-  <!-- Mini Game -->
-  <div class="section" id="game">
-    <h2>🎮 Catch Me If You Can!</h2>
-    <p>Score: <span id="score">0</span> 🌟<br>Tap the button fast!</p>
-    <button class="btn" onclick="increaseScore()">✨ Tap Me Fast!</button>
-    <button class="btn" onclick="goBack()">🔙 Back</button>
-  </div>
+  function showSection(id) {
+    document.getElementById('mainMenu').style.display = 'none';
+    document.getElementById(id).style.display = 'block';
+  }
 
-  <!-- Music Button -->
-  <button class="music" id="musicBtn" onclick="document.getElementById('bgMusic').play()">🎶 Music Playing</button>
-
-  <!-- Background Music -->
-  <audio id="bgMusic" loop>
-    <source src="https://www.bensound.com/bensound-music/bensound-sunny.mp3" type="audio/mp3">
-  </audio>
-
-  <!-- Script -->
-  <script>
-    let score = 0;
-
-    function openCard() {
-      document.querySelector('.envelope').style.display = 'none';
-      document.getElementById('mainMenu').style.display = 'block';
-      document.getElementById('musicBtn').style.display = 'block';
-      document.getElementById('bgMusic').play();
-    }
-
-    function showSection(id) {
-      document.getElementById('mainMenu').style.display = 'none';
-      document.getElementById(id).style.display = 'block';
-    }
-
-    function goBack() {
-      document.querySelectorAll('.section').forEach(el => el.style.display = 'none');
-      document.getElementById('mainMenu').style.display = 'block';
-    }
-
-    function increaseScore() {
-      score++;
-      document.getElementById('score').innerText = score;
-    }
-  </script>
+  function goBack() {
+    document.querySelectorAll('.section').forEach(el => el.style.display = 'none');
+    document.getElementById('mainMenu').style.display = 'block';
+  }
+</script>
 
 </body>
 </html>
